force-app/main/default/objects/CopilotForSalesforceAppsEvents__dlm/fields/ActionSuccess__c.field-meta.xml
<CustomField>
    <fullName>ActionSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Success</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionSuccess</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>