force-app/main/default/objects/CopilotForSalesforceAppsEvents__dlm/fields/ExternalLatencyTime__c.field-meta.xml
<CustomField>
    <fullName>ExternalLatencyTime__c</fullName>
    <label>External Latency Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalLatencyTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>