force-app/main/default/objects/CopilotForSalesforceAppsEvents__dlm/fields/PlanData__c.field-meta.xml
<CustomField>
    <fullName>PlanData__c</fullName>
    <label>Plan Data</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlanData</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>