force-app/main/default/objects/CopilotForSalesforceAppsEvents__dlm/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <label>Session ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SessionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>