force-app/main/default/objects/CopilotForSalesforceAppsEvents__dlm/fields/uuid__c.field-meta.xml
<CustomField>
    <fullName>uuid__c</fullName>
    <label>UUID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <primaryIndexOrder>1</primaryIndexOrder>
        <refAttrDeveloperName>uuid</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>